tests/snapshots/messages__type5_norwegian_cargo.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,53nFBv01SJ<thHp6220H4heHTf2222222222221650:454o<`9QSlUDp888888888888880,0*09\")"
---
StaticVoyageData(
    StaticVoyageData {
        message_type: 5,
        repeat_indicator: 0,
        mmsi: 258315000,
        ais_version: 0,
        imo: 6514895,
        callsign: LFNA,
        shipname: FALKVIK,
        shiptype: Cargo,
        to_bow: Some(
            40,
        ),
        to_stern: Some(
            10,
        ),
        to_port: Some(
            4,
        ),
        to_starboard: Some(
            5,
        ),
        epfd: Gps,
        eta_month: Some(
            3,
        ),
        eta_day: Some(
            14,
        ),
        eta_hour: Some(
            12,
        ),
        eta_minute: Some(
            40,
        ),
        draught: Some(
            3.8,
        ),
        destination: FORUS,
        dte: false,
    },
)
