tests/snapshots/messages__type6_us_local_extension.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,652T=1hMKkADFp410P<4,0*14\")"
---
BinaryAddressedMessage(
    BinaryAddressedMessage {
        message_type: 6,
        repeat_indicator: 0,
        mmsi: 338234631,
        seqno: 0,
        dest_mmsi: 123456789,
        retransmit: false,
        dac: 366,
        fid: 1,
        data_bits: 32,
        data: [
            1,
            2,
            3,
            4,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
    },
)
