tests/snapshots/messages__type6_with_payload_retransmitted.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,61mg=5KcNJ;605WNcKsg,0*22\")"
---
BinaryAddressedMessage(
    BinaryAddressedMessage {
        message_type: 6,
        repeat_indicator: 0,
        mmsi: 123456789,
        seqno: 2,
        dest_mmsi: 987654321,
        retransmit: true,
        dac: 1,
        fid: 25,
        data_bits: 32,
        data: [
            222,
            173,
            190,
            239,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
            0,
        ],
    },
)
