tests/snapshots/messages__type7_one_destination.snap
---
source: tests/messages.rs
expression: "parse(b\"!AIVDM,1,1,,A,71mg=5CcNJ;4,0*09\")"
---
BinaryAcknowledge(
    BinaryAcknowledge {
        message_type: 7,
        repeat_indicator: 0,
        mmsi: 123456789,
        mmsi1: 987654321,
        mmsiseq1: 0,
        mmsi2: None,
        mmsiseq2: None,
        mmsi3: None,
        mmsiseq3: None,
        mmsi4: None,
        mmsiseq4: None,
    },
)
